vector/f
swap.cpp:27:23: error: invalid operands to binary expression ('ft::vector<int>::const_iterator' (aka 'iterator<const int *>') and 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'iterator<int *>'))
        std::cout << (it_foo == bar.begin()) << std::endl;
                      ~~~~~~ ^  ~~~~~~~~~~~
./iterator.hpp:157:6: note: candidate template ignored: deduced conflicting types for parameter 'iterator' ('iterator<const int *>' vs. 'iterator<int *>')
bool operator==(iterator const &x, iterator const &y)
     ^
./iterator.hpp:162:6: note: candidate template ignored: deduced conflicting types for parameter 'iterator' ('iterator<const int *>' vs. 'iterator<int *>')
bool operator==(iterator  &x, iterator  &y)
     ^
./reverse_iterator.hpp:114:6: note: candidate template ignored: could not match 'reverse_iterator' against 'iterator'
bool operator==(const reverse_iterator<Iterator> &lhs,
     ^
./vector.hpp:727:6: note: candidate template ignored: could not match 'vector' against 'iterator'
bool operator==(const vector<T, Alloc> &lhs, const vector<T, Alloc> &rhs)
     ^
swap.cpp:28:23: error: invalid operands to binary expression ('ft::vector<int>::const_iterator' (aka 'iterator<const int *>') and 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'iterator<int *>'))
        std::cout << (it_bar == foo.begin()) << std::endl;
                      ~~~~~~ ^  ~~~~~~~~~~~
./iterator.hpp:157:6: note: candidate template ignored: deduced conflicting types for parameter 'iterator' ('iterator<const int *>' vs. 'iterator<int *>')
bool operator==(iterator const &x, iterator const &y)
     ^
./iterator.hpp:162:6: note: candidate template ignored: deduced conflicting types for parameter 'iterator' ('iterator<const int *>' vs. 'iterator<int *>')
bool operator==(iterator  &x, iterator  &y)
     ^
./reverse_iterator.hpp:114:6: note: candidate template ignored: could not match 'reverse_iterator' against 'iterator'
bool operator==(const reverse_iterator<Iterator> &lhs,
     ^
./vector.hpp:727:6: note: candidate template ignored: could not match 'vector' against 'iterator'
bool operator==(const vector<T, Alloc> &lhs, const vector<T, Alloc> &rhs)
     ^
2 errors generated.
